[package]
name = "sdc-cloudapi"
version = "0.1.0"
authors = ["smith"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dropshot = { git = "https://github.com/oxidecomputer/dropshot" }
tokio = ""
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.7", features = ["chrono", "uuid"] }
rust-sdc-clients = { path = "/home/smith/git/node-sdc-clients" }
serde_with = { version = "", features = ["json"] }
uuid = ""
http = ""
hyper = ""

